Add support for branch selection.
