# Giants.WebApi.Clients/swagger.json
@@ -1,5 +1,5 @@
 {
-  "x-generator": "NSwag v13.7.0.0 (NJsonSchema v10.1.24.0 (Newtonsoft.Json v10.0.0.0))",
+  "x-generator": "NSwag v13.16.1.0 (NJsonSchema v10.7.2.0 (Newtonsoft.Json v10.0.0.0))",
   "openapi": "3.0.0",
   "info": {
     "title": "My Title",
@@ -17,6 +17,26 @@
           "Servers"
         ],
         "operationId": "Servers_DeleteServer",
+        "parameters": [
+          {
+            "name": "gameName",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          },
+          {
+            "name": "port",
+            "in": "query",
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "x-position": 2
+          }
+        ],
         "responses": {
           "200": {
             "description": ""
@@ -68,6 +88,40 @@
         }
       }
     },
+    "/api/Branches": {
+      "get": {
+        "tags": [
+          "Branches"
+        ],
+        "operationId": "Branches_GetBranches",
+        "parameters": [
+          {
+            "name": "appName",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/Community": {
       "get": {
         "tags": [
@@ -88,6 +142,19 @@
         }
       }
     },
+    "/api/CrashReports": {
+      "post": {
+        "tags": [
+          "CrashReports"
+        ],
+        "operationId": "CrashReports_Upload",
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api/Version": {
       "get": {
         "tags": [
@@ -103,6 +170,15 @@
               "nullable": true
             },
             "x-position": 1
+          },
+          {
+            "name": "branchName",
+            "in": "query",
+            "schema": {
+              "type": "string",
+              "nullable": true
+            },
+            "x-position": 2
           }
         ],
         "responses": {
@@ -115,6 +191,29 @@
                 }
               }
             }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Version"
+        ],
+        "operationId": "Version_UpdateVersionInfo",
+        "requestBody": {
+          "x-name": "versionInfoUpdate",
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/VersionInfoUpdate"
+              }
+            }
+          },
+          "required": true,
+          "x-position": 1
+        },
+        "responses": {
+          "200": {
+            "description": ""
           }
         }
       }
@@ -153,6 +252,7 @@
           "mapName",
           "gameType",
           "numPlayers",
+          "maxPlayers",
           "gameState",
           "timeLimit",
           "fragLimit",
@@ -305,7 +405,8 @@
         "required": [
           "appName",
           "version",
-          "installerUri"
+          "installerUri",
+          "branchName"
         ],
         "properties": {
           "appName": {
@@ -319,6 +420,39 @@
             "type": "string",
             "format": "uri",
             "minLength": 1
+          },
+          "branchName": {
+            "type": "string",
+            "minLength": 1
+          }
+        }
+      },
+      "VersionInfoUpdate": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "appName": {
+            "type": "string",
+            "nullable": true
+          },
+          "appVersion": {
+            "nullable": true,
+            "oneOf": [
+              {
+                "$ref": "#/components/schemas/AppVersion"
+              }
+            ]
+          },
+          "fileName": {
+            "type": "string",
+            "nullable": true
+          },
+          "branchName": {
+            "type": "string",
+            "nullable": true
+          },
+          "forceUpdate": {
+            "type": "boolean"
           }
         }
       }
